--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Green Soul Defense</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Green Soul Shield Game</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <canvas id="gameCanvas" width="480" height="320"></canvas>
-  <div id="trackingPad"></div>
+  <canvas id="gameCanvas" width="300" height="300"></canvas>
+  <div id="dragPad"></div>
   <script src="game.js"></script>
 </body>
 </html>
